# mt-training-data-prep-tools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: CI.yml  notify-text-extraction-completion.yml
data/: catalog.json
docs/: README.md  _sidebar.md  aligner.md  auto-alignment-pipeline.md  data-pipeline.md  getting-started.md  index.html  run_auto_alinger.md
scripts/: add_TMs_publish_todo.py  add_branch_to_submodule_config.py  create_TMs_catalog.py  create_bo_puncts.py  create_tm_review_branch.py  delete_empty_tm_repos.py  delete_mt_repo.py  dharmamitra.py  find_TMs_since.py  find_aspiration-ai_only_repos.py  fix_splited_affix.py  make_repos_private.py  merge_qc_review_branch.py  transfer_repos.py  tsv2csv.py
src/op_mt_tools/: catalog.py  clean_text.py  cleanup.py  collection.py  config.py  github_utils.py  huggingface.py  logger.py  pipelines.py  publish.py  tm.py  tokenizers.py  types.py  utils.py
src/op_mt_tools/cli/: add_text_pairs.py  cleanup_en.py
src/op_mt_tools/import/: 84000.py  kvp.py
src/op_mt_tools/import/84000/: text_pair.py  tm.py
src/op_mt_tools/qc/: add_missing_segments.py  add_missing_segments_84000.py  check_ids.py  check_tm_exist.py  clean_84000.py  en.py  parse_logs.py  parse_qc_logs.py  pipeline.py  tm.py
src/op_mt_tools/scripts/: run_aligner.py
tests/: test_cleanup.py  test_collection.py  test_example.py  test_github_utils.py  test_pipelines.py  test_tm.py  test_tokenizers.py  test_utils.py
tests/data/collection/collection.opc/: meta.yml
tests/qc/: test_en.py  test_pipeline.py
