[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "op_mt_tools"
version = "0.0.1"
authors = [
  { name="OpenPecha", email="dev@openpecha.org" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "typing-extensions==4.5.0", # https://github.com/explosion/spaCy/issues/12659
  "openpecha>=0.11.4, <1.0",
  "gradio-client>=0.1.3, <1.0",
  "openai>=0.27.6, <1.0",
  "botok>=0.8.10, <1.0",
  "tiktoken>=0.4.0, <1.0",
  "spacy>=3.5.2, <4.0",
  "backoff>=2.2.1, <3.0",
  "tinydb>=4.8.0, <5.0",
  "huggingface_hub",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pre-commit",
]


[project.urls]
"Homepage" = "https://github.com/OpenPecha/openpecha-project-template"
"Bug Tracker" = "https://github.com/OpenPecha/openpecha-project-template/issues"
